compiler/testData/diagnostics/tests/inline/localFun.kt
// RUN_PIPELINE_TILL: SOURCE
fun main() {
    <!NOT_YET_SUPPORTED_IN_INLINE!>inline<!> fun a(){
    }
}